conf/conf-service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: conf
  labels:
    app: conf
  namespace: atlassian
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8090
  selector:
    app: conf
