conf/conf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conf
  namespace: atlassian
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - conf.omdgrp.ir
    secretName: conf-cert
  rules:
  - host: "conf.omdgrp.ir"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: conf
            port:
              number: 80
